-add-opens args for spring tests running on java 17