@@ -510,6 +510,8 @@
                             <argLine>${argline} ${jacocoArgLine}
                                 --add-opens java.base/java.lang=ALL-UNNAMED
                                 --add-opens java.base/java.util=ALL-UNNAMED
+                                --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                                --add-opens java.base/java.math=ALL-UNNAMED
                             </argLine>
                             <systemProperties>
                                 <!-- common shared -->
